# np1sec

./: .clang-format  .gitignore  .gitignore.orig  .travis.yml  CMakeLists.txt  LICENSE.orig  Makefile.am  Makefile.am.emscripten  Makefile.am.lint  Makefile.am.no_libpurple  README.md  README.md.orig  autogen.sh  circle.yml  configure.ac  configure.ac.emscripten  doxyconfig  gdb_jabberite.el  jabberite  libmpseq_test  testlog.txt
contrib/libpurple-2.10.9/: Makefile.am  Makefile.mingw  account.c  accountopt.c  blist.c  buddyicon.c  certificate.c  cipher.c  circbuffer.c  cmds.c  connection.c  conversation.c  core.c  dbus-analyze-functions.py  dbus-analyze-signals.py  dbus-analyze-types.py  dbus-bindings.h  dbus-define-api.h  dbus-purple.h  dbus-server.c  dbus-server.h  dbus-types.h  dbus-useful.c  dbus-useful.h  debug.c  desktopitem.c  dnsquery.c  dnssrv.c  eventloop.c  ft.c  idle.c  imgstore.c  log.c  marshallers.c  marshallers.list  media.c  mediamanager.c  mime.c  nat-pmp.c  network.c  (+51 more)
contrib/libpurple-2.10.9/ciphers/: Makefile.am  des.c  gchecksum.c  hmac.c  md4.c  md5.c  rc4.c  sha1.c  sha256.c
contrib/libpurple-2.10.9/example/: Makefile.am  defines.h  nullclient.c
contrib/libpurple-2.10.9/gconf/: Makefile.am  purple.schemas.in
contrib/libpurple-2.10.9/media/: backend-fs2.c  backend-fs2.h  backend-iface.c  candidate.c  codec.c  enum-types.c
contrib/libpurple-2.10.9/plugins/: Makefile.am  Makefile.mingw  autoaccept.c  buddynote.c  ciphertest.c  codeinline.c  dbus-buddyicons-example.py  dbus-example.c  debug_example.c  filectl.c  fortuneprofile.pl  helloworld.c  idle.c  ipc-test-client.c  ipc-test-server.c  joinpart.c  log_reader.c  newline.c  notify_example.c  offlinemsg.c  one_time_password.c  pluginpref_example.c  psychic.c  signals-test.c  simple.c  startup.py  statenotify.c
contrib/libpurple-2.10.9/plugins/mono/: GetBuddyBack.cs  MPlugin.cs  Makefile.am
contrib/libpurple-2.10.9/plugins/perl/: Makefile.am  Makefile.mingw  perl-common.c  perl-common.h  perl-handlers.c  perl-handlers.h  perl.c
contrib/libpurple-2.10.9/plugins/ssl/: Makefile.am  Makefile.mingw  ssl-gnutls.c  ssl-nss.c  ssl.c
contrib/libpurple-2.10.9/plugins/tcl/: Makefile.am  Makefile.mingw  signal-test.tcl  tcl.c  tcl_cmd.c  tcl_cmds.c  tcl_glib.c  tcl_glib.h  tcl_purple.h  tcl_ref.c  tcl_signals.c
contrib/libpurple-2.10.9/protocols/: Makefile.am  Makefile.mingw
contrib/libpurple-2.10.9/protocols/bonjour/: Makefile.am  Makefile.mingw  bonjour.c  bonjour.h  bonjour_ft.c  bonjour_ft.h  buddy.c  buddy.h  dns_sd_proxy.c  dns_sd_proxy.h  jabber.c  jabber.h  mdns_avahi.c  mdns_common.c  mdns_common.h  mdns_interface.h  mdns_types.h  mdns_win32.c  parser.c  parser.h
contrib/libpurple-2.10.9/protocols/gg/: Makefile.am  Makefile.mingw  buddylist.c  confer.c  confer.h  gg-utils.c  gg-utils.h  gg.c  search.c
contrib/libpurple-2.10.9/protocols/irc/: Makefile.am  Makefile.mingw  cmds.c  dcc_send.c  irc.c  irc.h  msgs.c  parse.c
contrib/libpurple-2.10.9/protocols/jabber/: Makefile.am  Makefile.mingw  adhoccommands.c  auth.c  auth_cyrus.c  auth_digest_md5.c  auth_plain.c  auth_scram.c  bosh.c  buddy.c  caps.c  chat.c  data.c  disco.c  ibb.c  iq.c  jabber.c  jabber.h  jutil.c  libxmpp.c  message.c  message.h  oob.c  parser.c  pep.c  ping.c  presence.c  roster.c  roster.h  si.c  useravatar.c  usermood.c  usernick.c  usertune.c  xdata.c
contrib/libpurple-2.10.9/protocols/msn/: Makefile.am  Makefile.mingw  cmdproc.c  command.c  contact.c  directconn.c  error.c  group.c  history.c  httpconn.c  msg.c  msn.c  msnutils.c  nexus.c  notification.c  object.c  oim.c  p2p.c  page.c  sbconn.c  servconn.c  session.c  slp.c  slpcall.c  slplink.c  slpmsg.c  slpmsg_part.c  soap.c  state.c  switchboard.c  table.c  tlv.c  transaction.c  user.c  userlist.c  xfer.c
contrib/libpurple-2.10.9/protocols/mxit/: Makefile.am  Makefile.mingw  actions.c  actions.h  aes.c  aes.h  chunk.c  chunk.h  cipher.c  cipher.h  filexfer.c  filexfer.h  formcmds.c  formcmds.h  http.c  http.h  login.c  login.h  markup.c  markup.h  multimx.c  multimx.h  mxit.c  mxit.h  profile.c  profile.h  protocol.c  protocol.h  roster.c  roster.h  splashscreen.c  splashscreen.h  voicevideo.c  voicevideo.h
contrib/libpurple-2.10.9/protocols/myspace/: Makefile.am  Makefile.mingw  README  markup.c  markup.h  message.c  message.h  myspace.c  myspace.h  persist.h  session.c  session.h  user.c  user.h  zap.c  zap.h
contrib/libpurple-2.10.9/protocols/novell/: Makefile.am  Makefile.mingw  nmconference.c  nmconference.h  nmconn.c  nmconn.h  nmcontact.c  nmcontact.h  nmevent.c  nmevent.h  nmfield.c  nmfield.h  nmmessage.c  nmmessage.h  nmrequest.c  nmrequest.h  nmrtf.c  nmrtf.h  nmuser.c  nmuser.h  nmuserrecord.c  nmuserrecord.h  novell.c
contrib/libpurple-2.10.9/protocols/null/: Makefile.am  Makefile.mingw  README  nullprpl.c
contrib/libpurple-2.10.9/protocols/oscar/: AUTHORS  odc.c  (+42 more)
contrib/libpurple-2.10.9/tests/: Makefile.am  check_libpurple.c  test_cipher.c  test_jabber_caps.c  test_jabber_digest_md5.c  test_jabber_jutil.c  test_jabber_scram.c  test_oscar_util.c  test_util.c  test_xmlnode.c  test_yahoo_util.c  tests.h
contrib/libpurple-2.10.9/win32/: giowin32.c  global.mak  libc_interface.c  libc_interface.h  libc_internal.h  libpurplerc.rc.in  rules.mak  targets.mak  win32dep.c  win32dep.h  wpurpleerror.h
test/: CMakeLists.txt  Makefile.inc  Makefile.inc.emscripten  Makefile.inc.no_libpurple  chamberclient.cc  chamberclient.h  chat_mocker.cc  chat_mocker.cpp  chat_mocker.h  chat_mocker_np1sec_plugin.cc  chat_mocker_np1sec_plugin.h  chat_mocker_timered.cc  chat_mocker_timered.h  crypt_test.cc  jabberite.cc  jabberite_np1sec_plugin.cc  jabberite_np1sec_plugin.h  jsoncpp.cpp  main.cc  prosody.cfg.lua  session_test.cc  test_logger.cc  test_message.cc  test_timers.cc  timered_session_test.cc  userstate_test.cc  xmpp_test.cpp
test/echo_chamber/: CMakeLists.txt  client.h  conv.h  echo_server.h  pipe.h  room.h  tests.cc  timer.h
test/jabberite/: Makefile.am  cli-ui.cc  echochamber-ui.cc  jabberite.cc  jabberite_np1sec_plugin.cc  ui.h
test/json/: json.h
(+1014 files in other folders)
